related songs paginator removed and default table size set to 50 items (paginator needs to be refactored, currently messes with layout so set to 50 items by default), related songs transitioning to similar table system as others (WIP), SimpleTableHeader momentarily, SongInfo doesnt create scrollbars in mobile, relatedSongs/SongInfo fixed to maximum same height on desktop, removed close button as top bar X is always visible

--- a/src/components/SongList/RelatedSongs.scss
+++ b/src/components/SongList/RelatedSongs.scss
@@ -9,6 +9,7 @@
     display: flex;
 
     .nav-tabs {
+      flex: 1;
       display: flex;
       flex-wrap: nowrap;
       border: none;
@@ -30,7 +31,7 @@
     }
 
     .pagination-container {
-      display: flex;
+      display: none;
       align-items: center;
 
       .pagination {
