--- a/src/components/SongList/SongInfo.scss
+++ b/src/components/SongList/SongInfo.scss
@@ -19,7 +19,6 @@
 
 .song-info {
   flex: 1;
-  max-height: 500px;
   overflow-y: auto;
   padding: var(--gap-medium);
   border-radius: var(--border-radius);
@@ -65,7 +64,7 @@
     .spotify-data-grid {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      // justify-content: space-between;
       margin-bottom: 10px;
     }
   
@@ -73,11 +72,12 @@
       display: flex;
       align-items: center;
       padding: 5px;
+      margin-right: 5px;
       border-radius: 4px;
       @include theme("background", "color-box");
   
       .value {
-        font-size: 1.2em;
+        font-size: 0.8em;
         font-weight: bold;
         margin-right: 5px;
         @include theme("color", "color-text");
@@ -383,5 +383,15 @@
 @media (max-width: 991px) {
   .charter {
     .info-line .label { min-width: 76px; }
+  }
+}
+
+@include mobile {
+  .song-info {
+    height: 100%;
+  }
+
+  .parts {
+    justify-content: space-between;
   }
 }
